# cortex-runtime

./: Cargo.toml  README.md  test.x
.github/: FUNDING.yml
example_tools/: tools.cfg  write_file.py
src/: application.rs  error.rs  main.rs
src/app/: core.rs  dto.rs  json_schema.rs  mod.rs  prompt.rs  runtime.rs
src/app/executor/: executor.rs
src/app/llm/: request_builder.rs
src/app/memory/: memory.rs
src/app/ports/: embedder.rs  llm.rs  memory.rs  mod.rs
src/app/session/: chat_session.rs  mod.rs
src/app/tools/: error.rs  mod.rs  ports.rs  tools.rs
src/config/: core.rs
src/domain/: context.rs  error.rs  llm.rs  memory.rs  message.rs  mod.rs
src/infrastructure/: memory.rs  mod.rs  module.rs  modules.rs  openai.rs
src/infrastructure/embedder/: openai.rs
src/infrastructure/llm/: openai.rs
src/infrastructure/memory/: mod.rs  ram.rs
src/infrastructure/tools/: external.rs  internal.rs
src/modules/: echo.rs
src/services/: llm.rs  memory.rs  mod.rs  module.rs
src/shared/: commands.rs
src/tools/: echo.rs
