[package]
name = "cortex-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
derive_more = "2.1.1"
dotenvy = "0.15.7"
genai = "0.5.3"
openai_api_rust = "0.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similarity = "0.2.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
